# kunlun-ipmi-oem

./: 0001-Kunlun-OEM-commands-The-first-version-add-two-comman.patch  MAINTAINERS  OWNERS  README.md  groups  meson.build  meson_options.txt  project.config
src/: .kunlun_oem.cpp.swp  .uuid  kunlun_oem.cpp  kunlun_oem.hpp  meson.build
test/: .uuid  meson.build  test_kunlun_ipmi_oem.cpp
